<resources>
    <string name="app_name">MTE-Bakalarka-app</string>
    <string name="Queue">Fronta v databázi</string>
    <string name="MapUnitBearing">°</string>
    <string name="MapUnitSpeed"> km/h</string>
    <string name="MapUnitAccuracy"> m</string>
    <string name="ButtonGetCellsText">Proveď zjištění buňek</string>
    <string name="ButtonDetailText">Detail</string>
    <string name="ButtonSendText">Odeslat data na API</string>
    <string name="MainButtonTransfer">API přenosy</string>
    <string name="MainButtonManual">Ruční vstup</string>
    <string name="LoginButtonText">Login</string>
    <string name="preference_file_key">info.stefkovi.studium.mte_bakalarka.PREFERENCES</string>
    <string name="CellListTopCid">Cell ID</string>
    <string name="CellListTopLac">LAC</string>
    <string name="CellListTopTac">TAC</string>
    <string name="CellListTopSignalAsu">Signal ASU</string>
    <string name="CellListTopSignalDbm">Signal dBm</string>
    <string name="SwitchActivate">Aktivuj sběr</string>
    <string name="SwitchOffline">Neposílat data</string>
    <string name="CellUpdateLabel">Poslední zaznamenaná událost:</string>
    <string name="SwitchActivateConfirm">Sběr aktivován!</string>
    <string name="SwitchDeactivateConfirm">Sběr ukončen</string>
    <string name="SettingsHeaderGather">Nastavení sběru dat</string>
    <string name="SettingsHeaderDatabase">Údržba databáze</string>
    <string name="SettingsButtonClearProcessed">Vymazat zpracované záznamy</string>
    <string name="SettingsButtonClearNotSent">Vymazat neodeslaná data</string>
    <string name="SettingsButtonResetErrors">Resetovat chyby</string>
    <string name="SettingsHeaderCopyright">Copyright a licence</string>
    <string name="SettingsCopyrightLicence">©2023 Roman Štefek (STE0516)</string>
    <string name="SettingsDatabaseConfirm">Údržba provedena!</string>
    <string name="SettingsGatherNum">Interval sběru dat (sekundy)</string>
    <string name="SettingsSave">Uložit</string>
    <string name="SettingsSaveConfirm">Nastavení uloženo!</string>
    <string name="PositionsFilter">Vykresli</string>
    <string name="BgChannelName">Sledování polohy na pozadí</string>
    <string name="BgChannelDesc">Aplikace sleduje na pozadí polohu zařízení, pokud je aplikace nastavena do módu "Aktivuj sběr"</string>
</resources>