<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <TextView
        android:id="@+id/tlSettingGather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/SettingsHeaderGather"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tlSettingDatabase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/SettingsHeaderDatabase"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etGatherNumsec" />



    <TextView
        android:id="@+id/tlSettingCopyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/SettingsHeaderCopyright"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bDeleteNonSent" />

    <Button
        android:id="@+id/bSaveGather"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:text="@string/SettingsSave"
        app:layout_constraintBottom_toBottomOf="@+id/tlGatherNumDesc"
        app:layout_constraintStart_toEndOf="@+id/tlGatherNumDesc"
        app:layout_constraintTop_toTopOf="@+id/tlGatherNumDesc" />

    <Button
        android:id="@+id/bDeleteProcessed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/SettingsButtonClearProcessed"
        app:layout_constraintStart_toStartOf="@+id/tlSettingDatabase"
        app:layout_constraintTop_toBottomOf="@+id/tlSettingDatabase" />

    <Button
        android:id="@+id/bDeleteNonSent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/SettingsButtonClearNotSent"
        app:layout_constraintStart_toStartOf="@+id/tlSettingDatabase"
        app:layout_constraintTop_toBottomOf="@+id/bDeleteProcessed" />

    <TextView
        android:id="@+id/tvCopyrightLicence"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/SettingsCopyrightLicence"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tlSettingCopyright"
        app:layout_constraintTop_toBottomOf="@+id/tlSettingCopyright" />

    <EditText
        android:id="@+id/etGatherNumsec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="2"
        android:inputType="number"
        android:singleLine="true"
        app:layout_constraintStart_toStartOf="@+id/tlSettingGather"
        app:layout_constraintTop_toBottomOf="@+id/tlSettingGather" />

    <TextView
        android:id="@+id/tlGatherNumDesc"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:gravity="center_vertical"
        android:text="@string/SettingsGatherNum"
        app:layout_constraintBottom_toBottomOf="@+id/etGatherNumsec"
        app:layout_constraintStart_toEndOf="@+id/etGatherNumsec"
        app:layout_constraintTop_toTopOf="@+id/etGatherNumsec" />

</androidx.constraintlayout.widget.ConstraintLayout>