<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CellListActivity">

    <LinearLayout
        android:id="@+id/topHeader"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="@color/primary"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/recycleView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="100dp"
            android:textColor="@color/white"
            android:layout_height="match_parent"
            android:text="@string/CellListTopCid" />

        <TextView
            android:layout_width="50dp"
            android:textColor="@color/white"
            android:layout_height="match_parent"
            android:text="@string/CellListTopLac"
            android:textAlignment="textEnd" />

        <TextView
            android:layout_width="50dp"
            android:textColor="@color/white"
            android:layout_height="match_parent"
            android:text="@string/CellListTopTac"
            android:textAlignment="textEnd" />

        <TextView
            android:layout_width="80dp"
            android:textColor="@color/white"
            android:layout_height="match_parent"
            android:text="@string/CellListTopSignalAsu"
            android:textAlignment="textEnd" />

        <TextView
            android:layout_width="80dp"
            android:textColor="@color/white"
            android:layout_height="match_parent"
            android:text="@string/CellListTopSignalDbm"
            android:textAlignment="textEnd" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycleView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topHeader" />

</androidx.constraintlayout.widget.ConstraintLayout>